crates/diffler/src/ui/snapshots/diffler__ui__diff_render__tests__a_figure_with_wide_labels_keeps_its_rows_at_the_card_width.snap
---
source: crates/diffler/src/ui/diff_render.rs
expression: card
---
"  ▌ figure 1                                                                      "
"  ▌ main                                                                          "
"  ▌ └─ serve                                                                      "
"  ▌    ├─ - 旧的认证                                                              " Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " ")]
"  ▌    └─ + 验证令牌签名                                                          " Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " ")]
