crates/diffler/src/ui/snapshots/diffler__ui__diff_render__tests__a_flowchart_with_subgraphs_renders_in_a_card.snap
---
source: crates/diffler/src/ui/diff_render.rs
expression: "figure_card(\"```mermaid\nflowchart LR\n  req[request] --> check{token valid?}\n  subgraph auth[Auth layer]\n    check -->|yes| load[load session]\n    check -->|no| reject[401]\n  end\n  subgraph data[Data layer]\n    load --> query[query db]\n    query --> render[render page]\n  end\n```\n\")"
---
"  ▌ figure 1                                                                      "
"  ▌                                                                               "
"  ▌           ╭─────────╮                                                         "
"  ▌           │ request │                                                         "
"  ▌           ╰─────────╯                                                         "
"  ▌                │                                                              "
"  ▌                │                                                              "
"  ▌ ╭─ Auth layer ─▼──────────────╮                                               "
"  ▌ │     ╭────────────────╮      │                                               "
"  ▌ │     │ ◇ token valid? │      │                                               "
"  ▌ │     ╰────────────────╯      │                                               "
"  ▌ │              │              │                                               "
"  ▌ │        ╭─────┴──────────╮   │                                               "
"  ▌ │        ▼                ▼   │                                               "
"  ▌ │╭──────────────╮      ╭─────╮│                                               "
"  ▌ ││ load session │      │ 401 ││                                               "
"  ▌ │╰──────────────╯      ╰─────╯│                                               "
"  ▌ ╰────────┼────────────────────╯                                               "
"  ▌          ╰─────╮                                                              "
"  ▌        ╭───────▼───────╮                                                      "
"  ▌        │ ╭──────────╮  │                                                      "
"  ▌        │ │ query db │  │                                                      "
"  ▌        │ ╰──────────╯  │                                                      "
"  ▌        │       │       │                                                      "
"  ▌        │       │       │                                                      "
"  ▌        │       ▼       │                                                      "
"  ▌        │╭─────────────╮│                                                      "
"  ▌        ││ render page ││                                                      "
"  ▌        │╰─────────────╯│                                                      "
"  ▌        ╰─ Data layer ──╯                                                      "
"  ▌ too wide side to side; drawn top to bottom instead, o open full graph         "
