crates/diffler/src/ui/snapshots/diffler__ui__diff_render__tests__a_sequence_diagram_renders_in_a_card.snap
---
source: crates/diffler/src/ui/diff_render.rs
expression: "figure_card(\"```mermaid\nsequenceDiagram\n  autonumber\n  participant UI as Browser\n  participant API\n  participant Auth as AuthService\n  participant DB\n  UI->>API: POST /login {user, pass}\n  API->>Auth: verify(credentials)\n  Note over Auth,DB: bcrypt compare happens here\n  Auth->>DB: SELECT hash FROM users WHERE name = ?\n  DB-->>Auth: row\n  alt password matches\n    Auth-->>API: token\n    API->>API: cache session\n    API-->>UI: 200 OK + cookie\n  else mismatch\n    Auth--xAPI: denied\n    API-->>UI: 401 Unauthorized\n  end\n  link Auth: verify @ src/auth.rs#verify\n```\n\")"
---
"  ▌ figure 1                                                                      "
"  ▌ [ Browser ]                     [ API ]             [ AuthService ]   [ DB ]  "
"  ▌      │ 1. POST /login {user, pass} │                       │             │    "
"  ▌      │────────────────────────────▸│                       │             │    "
"  ▌      │                             │ 2. verify(credential… │             │    "
"  ▌      │                             │──────────────────────▸│             │    "
"  ▌      │                             │         ┤ bcrypt compare happens here ├  "
"  ▌      │                             │                       │ 3. SELECT … │    "
"  ▌      │                             │                       │────────────▸│    "
"  ▌      │                             │                       │   4. row    │    "
"  ▌      │                             │                       │◂╌╌╌╌╌╌╌╌╌╌╌╌│    "
"  ▌ ┌─ alt: password matches ──────────────────────────────────────────────────┐  "
"  ▌      │                             │       5. token        │             │    "
"  ▌      │                             │◂╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│             │    "
"  ▌      │                             │ ↺ 6. cache session    │             │    "
"  ▌      │     7. 200 OK + cookie      │                       │             │    "
"  ▌      │◂╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│                       │             │    "
"  ▌ ├─ else: mismatch ─────────────────────────────────────────────────────────┤  "
"  ▌      │                             │       8. denied       │             │    "
"  ▌      │                             │×╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│             │    "
"  ▌      │     9. 401 Unauthorized     │                       │             │    "
"  ▌      │◂╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│                       │             │    "
"  ▌ └──────────────────────────────────────────────────────────────────────────┘  "
