crates/diffler/src/ui/snapshots/diffler__ui__diff_render__tests__hunk_renders_header_gutter_and_emphasis.snap
---
source: crates/diffler/src/ui/diff_render.rs
expression: render(&lines).backend()
---
" @@ -1,3 +1,3 @@                                            "
"    1    1 fn answer() {                                    "
"▌   2          41                                           "
"▌        2     42                                           "
"    3    3 }                                                "
"                                                            "
"                                                            "
"                                                            "
